[project]
name = "echo-mcp-server"
version = "0.1.0"
description = "A simple FastMCP 2.0 based MCP server with an echo tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
echo-server = "echo_mcp_server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
