[project]
name = "chkp-mcp-servers-mcp-server"
version = "0.1.2"
description = "MCP server for exploring and introspecting CheckPoint MCP servers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
chkp-mcp-servers-mcp-server = "chkp_mcp_servers:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chkp_mcp_servers"]
